Fixed date time conversion in Utils for Linux. Tried to prevent page break in table cell when printing reports. Fixed ".class", which is a reserved word in IE.

--- a/html/default.css
+++ b/html/default.css
@@ -223,4 +223,8 @@ ul.menu {
     button.deleteButton {
         display: none;
     }
+    tr, td {
+        page-break-inside: avoid;
+        page-break-before:auto;
+    }
 }
